SERVER-16749: handle per index exceptions and continue